--- a/scss/core/api/_animation.scss
+++ b/scss/core/api/_animation.scss
@@ -3,7 +3,7 @@
 // --------------------------------
 
 @use 'sass:map';
-@use '../api' as *;
+@use 'theme' as *;
 
 // --------------------------------
 //   Mixins
