--- a/scss/core/api/_duration.scss
+++ b/scss/core/api/_duration.scss
@@ -2,7 +2,8 @@
 //   Duration (Animation & Transition)
 // ------------------------------------
 
-@use '../api' as *;
+@use 'config' as *;
+@use 'theme' as *;
 
 @function duration($duration: config(fallbacks, duration)) {
   @return theme(duration, $duration);
