--- a/scss/core/api/_index.scss
+++ b/scss/core/api/_index.scss
@@ -1,6 +1,7 @@
 @forward 'animation';
 @forward 'border';
 @forward 'color';
+@forward 'config';
 @forward 'duration';
 @forward 'gradient';
 @forward 'layer';
@@ -9,6 +10,7 @@
 @forward 'size';
 @forward 'spacing';
 @forward 'svg';
+@forward 'theme';
 @forward 'transition';
 @forward 'typography';
 @forward 'visibility';
