--- a/scss/core/api/_layer.scss
+++ b/scss/core/api/_layer.scss
@@ -2,7 +2,8 @@
 //   Layer / Z-Index
 // --------------------------------
 
-@use '../api' as *;
+@use 'config' as *;
+@use 'theme' as *;
 
 // --------------------------------
 //   Functions
