--- a/scss/core/api/_typography.scss
+++ b/scss/core/api/_typography.scss
@@ -3,7 +3,9 @@
 // --------------------------------
 
 @use 'sass:list';
-@use '../api' as *;
+
+@use 'config' as *;
+@use 'theme' as *;
 
 // --------------------------------
 //   FUNCTIONS
