--- a/scss/utilities/_layout.scss
+++ b/scss/utilities/_layout.scss
@@ -2,7 +2,7 @@
 //   Layout Utilities
 // --------------------------------
 
-@use '../core' as *;
+@use '../core/generators' as *;
 
 // TODO: Stack; container; display; floats; clear (see others in tailwind, etc).
 // Also: https://1linelayouts.glitch.me/ (centered, etc).
