--- a/dev/assets/css/main.css
+++ b/dev/assets/css/main.css
@@ -1,7 +1,10 @@
-/* stylelint-disable max-nesting-depth */
-/* stylelint-enable */
-/* stylelint-disable max-nesting-depth */
-/* stylelint-enable */
+/*
+.element {
+  font-family: font(sans);
+  font-size: font(xl);
+  font-weight: font(bold);
+}
+*/
 /*! modern-normalize v1.1.0 | MIT License | https://github.com/sindresorhus/modern-normalize */
 /*
 Document
@@ -375,58 +378,58 @@ body {
 }
 
 :root {
-  --koi-animation-blink: blink 1s infinite;
-  --koi-animation-bounce: bounce 1s infinite;
+  --animation-blink: blink 1s infinite;
+  --animation-bounce: bounce 1s infinite;
 }
 
 :root {
-  --koi-duration-ultra-fast: 25ms;
-  --koi-duration-super-fast: 50ms;
-  --koi-duration-fastest: 75ms;
-  --koi-duration-faster: 100ms;
-  --koi-duration-fast: 150ms;
-  --koi-duration-normal: 200ms;
-  --koi-duration-slow: 300ms;
-  --koi-duration-slower: 500ms;
-  --koi-duration-slowest: 600ms;
-  --koi-duration-super-slow: 800ms;
-  --koi-duration-ultra-slow: 1200ms;
-  --koi-duration-1: 1s;
-  --koi-duration-2: 2s;
-  --koi-duration-3: 3s;
-  --koi-duration-4: 4s;
-  --koi-duration-5: 5s;
-  --koi-duration-25: 25ms;
-  --koi-duration-50: 50ms;
-  --koi-duration-75: 75ms;
-  --koi-duration-100: 100ms;
-  --koi-duration-150: 150ms;
-  --koi-duration-200: 200ms;
-  --koi-duration-300: 300ms;
-  --koi-duration-500: 500ms;
-  --koi-duration-700: 700ms;
-  --koi-duration-1000: 1000ms;
+  --duration-ultra-fast: 25ms;
+  --duration-super-fast: 50ms;
+  --duration-fastest: 75ms;
+  --duration-faster: 100ms;
+  --duration-fast: 150ms;
+  --duration-normal: 200ms;
+  --duration-slow: 300ms;
+  --duration-slower: 500ms;
+  --duration-slowest: 600ms;
+  --duration-super-slow: 800ms;
+  --duration-ultra-slow: 1200ms;
+  --duration-1: 1s;
+  --duration-2: 2s;
+  --duration-3: 3s;
+  --duration-4: 4s;
+  --duration-5: 5s;
+  --duration-25: 25ms;
+  --duration-50: 50ms;
+  --duration-75: 75ms;
+  --duration-100: 100ms;
+  --duration-150: 150ms;
+  --duration-200: 200ms;
+  --duration-300: 300ms;
+  --duration-500: 500ms;
+  --duration-700: 700ms;
+  --duration-1000: 1000ms;
 }
 
 :root {
-  --koi-shadow-xs: 0 1px 2px 0 rgba(0 0 0 /0.05);
-  --koi-shadow-sm: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-  --koi-shadow-md: 0 4px 6px -1px rgba(0 0 0 / 0.1), 0 2px 4px -1px rgba(0 0 0 / 0.06);
-  --koi-shadow-lg: 0 10px 15px -3px rgba(0 0 0 / 0.1), 0 4px 6px -2px rgba(0 0 0 / 0.05);
-  --koi-shadow-xl: 0 20px 25px -5px rgba(0 0 0 / 0.1), 0 10px 10px -5px rgba(0 0 0 / 0.04);
-  --koi-shadow-2xl: 0 25px 50px -12px rgba(0 0 0 / 0.25);
-  --koi-shadow-inner: inset 0 2px 4px 0 rgba(0 0 0 / 0.06);
-  --koi-shadow-outline: 0 0 0 3px rgba(66 153 225 / 0.5);
-  --koi-shadow-solid: 0 0 0 2px currentColor;
-  --koi-shadow-none: 0 0 #0000;
+  --shadow-xs: 0 1px 2px 0 rgba(0 0 0 /0.05);
+  --shadow-sm: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --shadow-md: 0 4px 6px -1px rgba(0 0 0 / 0.1), 0 2px 4px -1px rgba(0 0 0 / 0.06);
+  --shadow-lg: 0 10px 15px -3px rgba(0 0 0 / 0.1), 0 4px 6px -2px rgba(0 0 0 / 0.05);
+  --shadow-xl: 0 20px 25px -5px rgba(0 0 0 / 0.1), 0 10px 10px -5px rgba(0 0 0 / 0.04);
+  --shadow-2xl: 0 25px 50px -12px rgba(0 0 0 / 0.25);
+  --shadow-inner: inset 0 2px 4px 0 rgba(0 0 0 / 0.06);
+  --shadow-outline: 0 0 0 3px rgba(66 153 225 / 0.5);
+  --shadow-solid: 0 0 0 2px currentColor;
+  --shadow-none: 0 0 #0000;
 }
 
 :root {
-  --koi-timing-linear: linear;
-  --koi-timing-ease: cubic-bezier(0.25, 0.1, 0.25, 1);
-  --koi-timing-ease-in: cubic-bezier(0.4, 0, 1, 1);
-  --koi-timing-ease-out: cubic-bezier(0, 0, 0.2, 1);
-  --koi-timing-ease-in-out: cubic-bezier(0.4, 0, 0.2, 1);
+  --timing-linear: linear;
+  --timing-ease: cubic-bezier(0.25, 0.1, 0.25, 1);
+  --timing-ease-in: cubic-bezier(0.4, 0, 1, 1);
+  --timing-ease-out: cubic-bezier(0, 0, 0.2, 1);
+  --timing-ease-in-out: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /*! purgecss start ignore */
