--- a/scss/config/_index.scss
+++ b/scss/config/_index.scss
@@ -4,7 +4,7 @@
 
 $config: () !default;
 $default-config: (
-  prefix: 'koi',
+  prefix: '',
   base-font-size: 16,
   utility-glue: ':',
   fallbacks: (
