--- a/scss/core/api/_index.scss
+++ b/scss/core/api/_index.scss
@@ -11,6 +11,7 @@
 @forward 'spacing';
 @forward 'svg';
 @forward 'theme';
+@forward 'timing';
 @forward 'transition';
 @forward 'typography';
 @forward 'visibility';
