--- a/scss/config/_tokens.scss
+++ b/scss/config/_tokens.scss
@@ -483,6 +483,7 @@ $timing: (
   ease-in: cubic-bezier(0.4, 0, 1, 1),
   ease-out: cubic-bezier(0, 0, 0.2, 1),
   ease-in-out: cubic-bezier(0.4, 0, 0.2, 1),
+  ease-elastic: cubic-bezier(0.5, 1, 0.75, 1.25),
 );
 
 $keyframes: (
