--- a/scss/core/api/_typography.scss
+++ b/scss/core/api/_typography.scss
@@ -41,7 +41,7 @@
   @return theme(tracking, $tracking);
 }
 
-// Font-size default leading
+// Font-size default leading (line-height)
 @function font-default-leading($font-size) {
   @return list.nth(theme(font-size, $font-size), 2);
 }
@@ -52,6 +52,11 @@
 
 // Font-size with default line-height
 @mixin font-size($font-size: config(fallbacks, font-size)) {
+  font-size: font-size($font-size);
+}
+
+// Font-size with default line-height
+@mixin text-size($font-size: config(fallbacks, font-size)) {
   font-size: font-size($font-size);
   line-height: font-default-leading($font-size);
 }
