--- a/scss/core/api/_color.scss
+++ b/scss/core/api/_color.scss
@@ -3,19 +3,19 @@
 // --------------------------------
 
 @use 'sass:map';
+
+@use '../helpers' as *;
 @use 'config' as *;
 @use 'theme' as *;
 
-// TODO: implement color var return
-@function fill($name, $shade: config(fallbacks, colors), $alpha: 1, $type: value) {
-  @if $type == value {
-    @if is-theme-color($name, $shade) {
-      @return theme(colors, $name, $shade);
-    } @else if is-theme-color($name) {
-      @return theme(colors, $name);
-    }
-  } @else if $type == var {
-    // TODO: implement color var return
-    @return 'var(--custom-prop-color-value-here)';
+@function fill($name, $shade: config(fallbacks, colors), $alpha: 1) {
+  @if is-theme-color($name, $shade) {
+    @return to-hsl(theme(colors, $name, $shade));
+  } @else if is-theme-color($name) {
+    @return to-hsl(theme(colors, $name));
   }
+}
+
+@function accent($shade: config(fallbacks, colors), $alpha: 1) {
+  @return hsl(var(--color-accent-#{$shade}), $alpha);
 }
