--- a/dev/assets/css/main.css
+++ b/dev/assets/css/main.css
@@ -544,30 +544,33 @@ figure figcaption {
 
 body {
   font-size: 1rem;
-  background-color: #f8fafc;
+  color: hsl(210deg, 40%, 96.0784313725%);
+  background-color: hsl(222.2222222222deg, 47.3684210526%, 11.1764705882%);
   padding: 1.5rem 1.5rem;
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
 h1 {
-  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 
 a {
-  color: #0cf;
+  color: hsl(192deg, 100%, 50%);
 }
 
 .wrapper {
   margin-top: 1.5rem;
   padding: 2rem;
-  background-color: #f1f5f9;
-  border: 2px solid #475569;
+  background-color: hsl(217.2413793103deg, 32.5842696629%, 17.4509803922%);
+  border: 2px solid hsl(215.2941176471deg, 19.3181818182%, 34.5098039216%);
   border-radius: 8px;
   box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
 }
 .wrapper:hover {
-  border-color: #0cf;
-  background-color: #eff6ff;
+  border-color: hsl(192deg, 100%, 50%);
+  background-color: hsl(215.2941176471deg, 25%, 26.6666666667%);
   transition: all linear 400ms;
 }
 .wrapper button {
