--- a/scss/core/helpers/_color.scss
+++ b/scss/core/helpers/_color.scss
@@ -1,5 +1,6 @@
 @use 'sass:color';
 
+// Convert color to hsl: hue, saturation, lightness
 @function to-hsl($color) {
-  @return hsl(color.hue($color), color.saturation($color), color.lightness($color), color.alpha($color));
+  @return color.hue($color), color.saturation($color), color.lightness($color);
 }
