--- a/dev/assets/css/main.css
+++ b/dev/assets/css/main.css
@@ -789,8 +789,8 @@ figure figcaption {
 
 body {
   font-size: 1rem;
-  color: #f1f5f9;
-  background-color: #0f172a;
+  color: hsl(var(--color-hsl-gray-1), 1);
+  background-color: hsl(var(--color-hsl-gray-9), 1);
   padding: 1.5rem 1.5rem;
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
@@ -799,24 +799,24 @@ h1 {
   font-size: 2.25rem;
   line-height: 2.5rem;
   font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
-  color: #1e40af;
+  color: hsl(var(--color-hsl-primary), 1);
 }
 
 a {
-  color: #00ccff;
+  color: hsl(var(--color-hsl-primary), 1);
 }
 
 .wrapper {
   box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   margin-top: 1.5rem;
   padding: 2rem;
-  background-color: #1e293b;
-  border: 2px solid #475569;
+  background-color: hsl(var(--color-hsl-gray-8), 1);
+  border: 2px solid hsl(var(--color-hsl-gray-6), 1);
   border-radius: 8px;
 }
 .wrapper:hover {
-  border-color: #00ccff;
-  background-color: #334155;
+  border-color: hsl(var(--color-hsl-primary), 1);
+  background-color: hsl(var(--color-hsl-gray-7), 1);
   transition: all linear 400ms;
 }
 .wrapper button {
