--- a/dev/assets/scss/_base.scss
+++ b/dev/assets/scss/_base.scss
@@ -19,7 +19,8 @@ body {
 h1 {
   @include koi.text-size(4xl);
   font-family: koi.font-family(serif);
-  color: koi.fill(blue, 8);
+  color: koi.fill(primary);
+  // color: koi.fill(blue, 3);
   // color: koi.fill(blue, 8, 0.5);
   // color: koi.accent(5);
   // color: var(--color-accent-8);
