--- a/scss/core/api/_index.scss
+++ b/scss/core/api/_index.scss
@@ -3,6 +3,7 @@
 @forward 'color';
 @forward 'config';
 @forward 'duration';
+@forward 'focus';
 @forward 'gradient';
 @forward 'layer';
 @forward 'media-query';
